# github-actions-pipx

./: .gitignore  README.md  package-lock.json  package.json  requirements.pipx.txt
.github/actions/install/: README.md
.github/actions/pipx_install/: action.yml
.github/actions/run_pip-audit/: README.md  action.yml
.github/workflows/: always.yml  dependency-review.yml  pull_request.yml  run_pip-audit.yml  run_pip-audit_path.yml  test_actions__install.yml  test_actions__pipx_install.yml  test_actions__run_pip-audit.yml  test_workflows__run_pip-audit.yml  test_workflows__run_pip-audit_path.yml
assets/examples/algorithmic-excercises/: pyproject.toml
assets/examples/empty-pyproject/: main.py  pyproject.toml
assets/examples/pip-audit/: requirements.pipx.txt
assets/examples/pypyr/: requirements.pipx.txt
assets/examples/uv/: requirements.pipx.txt
